--- a/manifest.json
+++ b/manifest.json
@@ -6,6 +6,10 @@
     "src": "images/frontfest-logo.svg",
     "sizes": "48x48 72x72 96x96 144x144 168x168 192x192",
     "type": "image/svg+xml"
+  }, {
+    "src": "images/logo-280x280.png",
+    "sizes": "280x280",
+    "type": "image/png"
   }],
   "start_url": "./",
   "display": "standalone",
